--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Thymeleaf</title>
+    <title>五哥前女友</title>
 </head>
 <body>
-<h2>欢迎使用Thymeleaf!!</h2>
-<a href="http://www.baidu.com" th:href="${info}">戳我有惊喜</a>
+<h2>第一任</h2>
 <img th:src="@{/img/1.jpg}">
+<h2>第二任</h2>
+<img th:src="@{/img/2.jpg}">
 </body>
 </html>
